# CSD2

./: .gitignore  CSD2a  README  README.rtf  Vragen Intro Git.rtf  hello.rtf
CSD2a/: Pseudo-Text-Rhythm-Algorhythm.js  Reflectie.md  RhythmAlgorhythm.py
CSD2b/excercises/: CMakeLists.txt
CSD2b/excercises/1.3_Speaker/: main.cpp
CSD2b/excercises/1.4_Inheritance/: CMakeLists.txt  ReadMe.md  cat.cpp  cat.h  corgy.cpp  corgy.h  dog.cpp  dog.h  husky.cpp  husky.h  main.cpp  pet.cpp  pet.h
CSD2b/excercises/2.1_Oscillator/: CMakeLists.txt  main.cpp  oscillator.cpp  oscillator.h
CSD2b/excercises/2.3_Inheritance/: CMakeLists.txt  README.md  customCallback.h  main.cpp  oscillator.cpp  oscillator.h  saw.cpp  sine.cpp  sine.h  square.cpp  square.h
CSD2b/excercises/3.1_SynthClass/: CMakeLists.txt  README.md  callback.cpp  callback.h  customCallback.h  oscillator.h  saw.cpp  sine.cpp  square.cpp  square.h
CSD2b/excercises/4.2_UserInput/: CMakeLists.txt  README.md  callback.cpp  callback.h  main.cpp  oscillator.h  saw.cpp  sine.cpp  sine.h  square.cpp  synth.cpp  synth.h  userinput.cpp  userinput.h
CSD2b/excercises/4.3_Melody/: CMakeLists.txt  audiocomponent.h  callback.cpp  callback.h  main.cpp  melody.cpp  note.cpp  square.h  synth.cpp  synth.h  userinput.cpp
CSD2b/synthSong/: CMakeLists.txt  REFLECTION.md  design.docx  learningGoals.md  pseudo code FM.js  pseudo code RM.js  ~$design.docx
CSD2b/synthSong/Assignment Reflections/: 1.4_Inheritance Process.md  2.1_Oscillator Process.md  3.1_SynthClass Process.md  4.3_Melody Process.md
CSD2b/synthSong/Codebase/: CMakeLists.txt  README.md  callback.cpp  callback.h  freqmod.cpp  freqmod.h  melody.h  note.h  oscillator.cpp  oscillator.h  ringmod.cpp  ringmod.h  saw.cpp  saw.h  sine.h  synth.cpp  synth.h
CSD2c/Documentation/: LearningGoals.md  OverallDesign.md
CSD2c/Documentation/DiaryEntries/: 11Mar2026-SomeThoughtsOnReverb.md  11Mar2026-TestingDelay.md  2_10Mar2026-CodingInTheRightPlace.md  3_10Mar2026-MakingCircBuffer.md  5_11Mar2026-SomeThoughtsOnReverb.md  6_11Mar2026-AllPassFilter.md  6_13Mar2026-TotalConfusion.md  LetTheCodingBegin-9Mar2026.md
CSD2c/EffectChainKnob/: CMakeLists.txt  EffectsChain.h  PluginEditor.cpp
CSD2c/EffectChainKnob/csd_lib/effects/: waveShaper.h
CSD2c/EffectDevelopment/: CMakeLists.txt  callback.cpp  callback.h  circularBuffer.cpp  circularBuffer.h  settings.h
